--- a/index/index.html
+++ b/index/index.html
@@ -19,7 +19,11 @@
             <ul id = "menuList">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li class="dropdown_item">
+                    <div class="nav_link">
+                        Services <i class = "fas fa-caret-down"></i>
+                    </div>
+                </li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
